[project]
name = "pyEGPM"
version = "2023.11.0.dev0"
authors = [
    {name = "Mischa Siekmann", email = "mischa@gnumpi.com"},
]
description = "Controlling Energenie PM power strips with python."
readme = "README.md"
requires-python = ">=3.8"
keywords = []
license     = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyusb",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
